fixed cut off text

--- a/main.css
+++ b/main.css
@@ -134,7 +134,7 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-175%, -55%);
+  transform: translate(-160%, -55%);
   color: white;
   font-family: Ink Free;
   font-weight: bold;
